Added parsing for initial state